[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Environments/background.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Environments/midground.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Environments/foreground.png" type="Texture" id=6]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sounds/Music/House In a Forest Loop.ogg" type="AudioStream" id=9]
[ext_resource path="res://Sounds/SFX/gameover.wav" type="AudioStream" id=10]
[ext_resource path="res://Scenes/AnalogStick.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/ShootStick.tscn" type="PackedScene" id=12]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.857361, -2.10706, 0, 0, 0, 0, 721.61, -0.478043, 0, 0, 0, 0, 719.981, 476.008, 0, 0, 0, 0, -2.48637, 473.565, 0, 0, 0, 0, 0.771652, -3.73607, 0, 0, 0, 0, -0.857361, -2.10706 )
}

[node name="Main" type="Node"]

script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="Camera" parent="." index="0" instance=ExtResource( 3 )]

[node name="Background" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "Theme" ]

[node name="Sprite" type="Sprite" parent="Background" index="0"]

position = Vector2( 357.502, 242.177 )
scale = Vector2( 0.375631, 0.255444 )
z_index = -10
texture = ExtResource( 4 )
_sections_unfolded = [ "Offset", "Transform", "Z Index" ]

[node name="Sprite2" type="Sprite" parent="Background" index="1"]

position = Vector2( 358.741, 241.68 )
scale = Vector2( 0.365212, 0.243475 )
z_index = -10
texture = ExtResource( 5 )
_sections_unfolded = [ "Offset", "Z Index" ]

[node name="Sprite3" type="Sprite" parent="Background" index="2"]

position = Vector2( 356.544, 235.648 )
scale = Vector2( 0.365528, 0.246679 )
z_index = -10
texture = ExtResource( 6 )
_sections_unfolded = [ "Offset", "Transform", "Z Index" ]

[node name="Area2D" type="StaticBody2D" parent="Background/Sprite3" index="0" groups=[
"Walls",
]]

visible = false
input_pickable = false
collision_layer = 16
collision_mask = 16
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.01
_sections_unfolded = [ "Collision" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Background/Sprite3/Area2D" index="0"]

build_mode = 0
polygon = PoolVector2Array( -0.11322, -886.849, 47.2363, -891.81, 110.369, -900.314, 157.24, -901.023, 197.416, -901.023, 225.634, -883.305, 258.635, -881.888, 281.114, -880.471, 309.333, -857.792, 335.16, -844.326, 368.161, -841.491, 391.597, -846.452, 421.64, -862.044, 448.423, -880.471, 487.164, -896.062, 518.252, -899.606, 558.427, -906.693, 616.299, -916.615, 662.692, -916.615, 716.737, -910.945, 738.26, -904.567, 797.088, -898.188, 843.481, -895.353, 868.352, -875.51, 901.831, -851.413, 904.701, -842.2, 898.962, -832.987, 904.223, -816.687, 909.962, -795.425, 905.657, -779.125, 905.657, -762.116, 909.962, -745.815, 919.528, -734.476, 931.006, -705.419, 931.006, -687.701, 927.658, -671.401, 927.658, -662.188, 920.962, -644.47, 914.266, -635.965, 898.483, -626.043, 885.57, -621.082, 872.178, -606.199, 860.221, -601.947, 840.612, -579.977, 850.177, -557.298, 857.351, -534.62, 860.221, -519.737, 868.352, -502.019, 874.569, -465.166, 878.874, -450.283, 894.657, -381.538, 918.571, -324.841, 922.397, -301.454, 924.789, -280.192, 921.919, -256.096, 921.919, -230.514, 924.31, -208.544, 924.789, -183.031, 924.31, -163.896, 910.44, -139.091, 898.483, -132.712, 877.917, -116.412, 875.526, -91.6071, 884.135, -65.3848, 887.961, -43.4147, 899.44, -11.5228, 908.049, 12.5735, 912.832, 50.1351, 918.571, 84.8621, 928.137, 128.802, 930.528, 147.937, 939.615, 169.907, 946.311, 191.169, 946.311, 218.808, 940.572, 242.905, 936.746, 255.661, 946.311, 324.406, 950.616, 362.677, 948.703, 392.443, 947.746, 414.413, 951.094, 433.548, 961.616, 464.731, 953.964, 488.119, 942.963, 502.293, 932.919, 527.098, 929.093, 568.911, 929.093, 648.554, 929.093, 725.804, 922.876, 770.453, 905.179, 778.249, 882.222, 778.249, 865.482, 773.996, 851.134, 761.24, 841.568, 747.065, 833.437, 736.435, 822.915, 739.978, 814.785, 744.939, 810.002, 764.074, 810.48, 784.627, 808.567, 807.306, 811.437, 839.906, 816.219, 863.294, 808.567, 878.177, 776.522, 891.642, 757.391, 891.642, 736.347, 896.604, 713.868, 896.604, 698.085, 890.934, 686.128, 875.342, 671.779, 875.342, 644.517, 875.342, 616.299, 868.255, 583.776, 859.75, 518.73, 848.411, 513.469, 831.402, 499.121, 831.402, 483.816, 834.237, 467.076, 840.615, 440.293, 865.42, 426.423, 877.468, 392.943, 898.021, 369.508, 904.399, 357.551, 901.564, 338.419, 893.769, 324.071, 888.807, 302.07, 885.973, 276.398, 891.642, 235.744, 893.06, 198.439, 890.934, 177.873, 883.138, 165.916, 873.216, 149.176, 873.216, 125.262, 871.09, 119.045, 858.333, 121.436, 837.78, 120.001, 826.441, 108.522, 812.267, 100.392, 793.132, 89.3912, 778.957, 89.3912, 765.492, 76.9559, 744.939, 64.999, 722.969, 58.7814, 679.029, 53.5203, 659.894, 51.1289, 633.672, 42.0417, 586.188, 37.7371, 569.179, 51.6073, 550.044, 84.1301, 511.773, 86.0432, 503.978, 82.6953, 492.638, 81.2605, 477.046, 73.608, 465.707, 66.9121, 451.533, 66.9121, 434.524, 85.0867, 428.854, 112.349, 419.641, 131.001, 423.184, 145.35, 429.563, 161.133, 432.398, 171.655, 425.311, 182.656, 421.058, 200.352, 418.224, 221.874, 415.389, 241.484, 418.932, 291.225, 413.971, 310.356, 411.845, 317.052, 404.758, 324.704, 392.001, 324.704, 377.827, 321.356, 360.109, 324.704, 349.479, 319.921, 340.265, 319.921, 326.091, 308.921, 326.8, 284.529, 333.178, 257.745, 345.935, 220.439, 344.517, 198.917, 343.809, 160.176, 334.595, 86.0432, 331.761, 63.0859, 331.761, 49.6941, 326.091, 25.7802, 327.508, 8.56213, 332.469, -14.3951, 332.469, -32.5697, 328.217, -48.8312, 328.217, -64.6144, 328.217, -87.5718, 332.469, -118.66, 333.887, -138.269, 333.887, -158.357, 335.304, -193.158, 338.848, -222.811, 344.517, -254.855, 345.226, -277.813, 337.43, -298.857, 330.343, -316.553, 323.965, -321.814, 333.178, -322.293, 357.274, -326.597, 374.992, -326.597, 395.545, -312.249, 408.302, -295.509, 411.136, -269.204, 412.554, -240.985, 416.806, -223.767, 413.971, -195.071, 418.932, -175.94, 423.184, -161.591, 433.106, -148.678, 432.398, -132.894, 426.019, -111.372, 416.097, -98.4584, 423.184, -84.5884, 427.437, -69.2834, 433.815, -64.5007, 445.155, -66.4138, 462.164, -77.4142, 474.212, -84.1101, 496.89, -78.8491, 518.86, -64.0224, 530.909, -51.5872, 545.791, -40.1085, 567.053, -40.5868, 586.188, -47.2827, 625.167, -48.7175, 646.428, -53.022, 670.525, -57.3265, 698.873, -64.979, 726.513, -75.5011, 734.309, -75.5011, 749.192, -87.458, 759.114, -91.2843, 771.161, -92.7191, 790.297, -103.719, 807.306, -114.72, 824.315, -121.416, 831.402, -120.938, 846.994, -119.024, 861.877, -135.286, 871.798, -162.548, 877.468, -211.332, 896.604, -290.726, 891.642, -307.466, 888.807, -330.423, 892.351, -349.555, 899.438, -363.425, 905.817, -378.251, 905.817, -390.208, 905.817, -405.035, 898.73, -438.514, 870.381, -450.95, 864.003, -460.037, 856.916, -477.255, 839.906, -494.951, 834.946, -507.386, 832.819, -519.822, 842.741, -523.17, 850.537, -537.04, 850.537, -655.653, 874.633, -672.407, 876.76, -679.581, 876.051, -690.103, 876.051, -695.364, 884.555, -711.626, 892.351, -732.192, 898.021, -750.845, 894.477, -798.672, 885.264, -819.238, 869.672, -817.804, 851.246, -814.934, 825.732, -812.064, 778.957, -812.543, 759.114, -818.282, 744.939, -827.369, 736.435, -837.891, 739.27, -846.5, 752.026, -858.457, 766.201, -880.458, 775.414, -901.024, 777.54, -914.894, 775.414, -927.329, 762.657, -932.112, 737.143, -930.677, 543.665, -934.504, 516.026, -945.026, 495.473, -958.417, 469.251, -958.896, 443.028, -954.591, 426.728, -948.374, 399.088, -948.374, 378.536, -948.374, 363.653, -948.374, 333.887, -939.765, 265.851, -939.765, 243.88, -945.026, 225.091, -945.982, 200.995, -945.504, 176.899, -938.33, 166.268, -934.504, 142.172, -926.373, 111.697, -912.981, 52.1656, -912.503, 21.691, -910.111, 4.68201, -901.024, -10.201, -887.154, -48.4713, -885.241, -64.063, -881.415, -78.2372, -876.632, -95.955, -879.502, -111.547, -895.763, -134.225, -914.894, -139.895, -925.416, -163.991, -928.286, -189.505, -926.851, -211.475, -924.938, -237.697, -924.938, -256.832, -929.242, -277.385, -923.981, -322.742, -912.024, -357.469, -902.459, -376.605, -879.98, -461.65, -876.154, -487.39, -871.849, -511.486, -864.675, -523.535, -857.022, -535.583, -854.631, -563.931, -847.935, -577.397, -848.892, -592.279, -863.24, -602.201, -879.502, -619.919, -909.633, -631.259, -923.025, -643.307, -926.851, -661.024, -929.721, -694.334, -929.242, -717.721, -908.677, -757.409, -904.372, -778.67, -907.72, -790.719, -908.677, -808.436, -903.894, -827.572, -906.285, -843.163, -892.415, -863.716, -840.761, -902.695, -736.975, -909.073, -696.799, -919.704, -676.233, -919.704, -627.927, -921.121, -524.619, -906.947, -508.487, -905.53, -492.226, -903.404, -458.268, -891.356, -429.571, -875.055, -408.049, -855.211, -383.178, -848.833, -345.872, -848.124, -319.089, -857.337, -296.61, -874.346, -277.479, -889.938, -227.738, -888.521, -209.563, -897.734, -187.084, -909.782, -134.473, -906.947, -107.212, -906.238, -67.0362, -902.695 )

[node name="HUD" parent="." index="2" instance=ExtResource( 7 )]

[node name="Player" parent="." index="3" instance=ExtResource( 8 )]

position = Vector2( 357.053, 286.87 )

[node name="MobTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="ScoreTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="StartTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="StartPosition" type="Position2D" parent="." index="7"]

position = Vector2( 357.425, 286.799 )
_sections_unfolded = [ "Transform" ]

[node name="MobPath" type="Path2D" parent="." index="8"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath" index="0"]

position = Vector2( -0.857361, -2.10706 )
rotation = 0.00225476
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Music" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="DeathSound" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 10 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="MoveStick" parent="." index="11" instance=ExtResource( 11 )]

position = Vector2( 101.296, 345.195 )
_sections_unfolded = [ "Angular", "Applied Forces", "Collision", "Linear", "Pause", "Pickable", "Transform", "collision" ]

[node name="StartDelay" type="Timer" parent="." index="12"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="ShootStick" parent="." index="13" instance=ExtResource( 12 )]

position = Vector2( 627.591, 335.025 )

[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]

[connection signal="body_entered" from="Player" to="." method="_on_Player_body_entered"]

[connection signal="damaged" from="Player" to="Camera" method="_on_Player_damaged"]

[connection signal="hit" from="Player" to="." method="game_over"]

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]

[connection signal="released" from="MoveStick" to="Player" method="_on_AnalogStick_released"]

[connection signal="released" from="MoveStick" to="." method="_on_AnalogStick_released"]

[connection signal="touching" from="MoveStick" to="Player" method="_on_AnalogStick_touching"]

[connection signal="touching" from="MoveStick" to="." method="_on_AnalogStick_touching"]

[connection signal="timeout" from="StartDelay" to="." method="_on_StartDelay_timeout"]

[connection signal="not_shooting" from="ShootStick" to="Player" method="_on_ShootStick_not_shooting"]

[connection signal="not_shooting" from="ShootStick" to="." method="_on_ShootStick_not_shooting"]

[connection signal="shooting" from="ShootStick" to="." method="_on_ShootStick_shooting"]


